@@ -1,3 +1,9 @@
+2003-05-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkText.c (TextSearchCmd): Forwards and backwards aren't
+	the same.  [Bug 740558]  Also edited SearchCore to get it closer
+	to the Engineering Manual style guidelines.
+
 2003-05-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/textImage.test:		Fixed faults in option parsing and
